# c-proj-winsock

./: .gitignore  CMakeLists.txt  README.md  client.c  makebin.c  readbin.c  score.h  server.c  src.csv  utils.h
